# comfyui-Hhhapi

./: .gitignore  Hhh_文本API_管理面板_SPEC.md  README.md  __init__.py  hhhapi_config.json  image_provider_store.py  nodes_bltcy_gpt_image.py  nodes_bltcy_image_manager.py  nodes_bltcy_nano_image.py  nodes_image.py  nodes_provider.py  nodes_text.py  provider_store.py  pyproject.toml  routes.py  secret_store.py
adapters/: __init__.py  base.py  bltcy_images.py  minimax_vision.py  openai_chat.py  openai_images.py
js/: hhhapi_bltcy_image.js  hhhapi_image_manager.js  hhhapi_manager.js  hhhapi_text.js  hhhapi_text_fallback_fix.js
utils/: errors.py  image.py  response.py
