[project]
name = "hhhapi"
version = "0.1.1"
description = "ComfyUI custom nodes for unified text API access with provider management and MiniMax image understanding."
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]
classifiers = [
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/Hhh2178/comfyui-Hhhapi"
Documentation = "https://github.com/Hhh2178/comfyui-Hhhapi#readme"
"Bug Tracker" = "https://github.com/Hhh2178/comfyui-Hhhapi/issues"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.comfy]
PublisherId = "Hhh2178"
DisplayName = "Hhhapi"
requires-comfyui = ">=0.3.0"
